# career-flow

./: .gitignore  CHANGELOG.md  Dockerfile  ENVIRONMENT.md  LICENSE  app.py  job_description.txt  pyproject.toml  requirements.txt  resume.txt  tailor.py  tailored_application.md  temp_cv_c0bd7810-aa7c-44dc-aa2a-7a00ecc587dd.yaml
.github/: copilot-instructions.md
