[project]
name = "career-flow"
version = "0.1.0"
description = ""
authors = [
    {name = "Borna Barahimi",email = "bornabarahimi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.96.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
