[tool.poetry]
name = "career-flow"
version = "0.1.0"
description = ""
authors = ["Borna Barahimi <bornabarahimi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
openai = ">=1.96.1,<2.0.0"
streamlit = ">=1.46.1,<2.0.0"
"rendercv" = {extras = ["full"], version = ">=2.2,<3.0"}
pyyaml = ">=6.0.2,<7.0.0"
pydantic = "==2.10.5"
instructor = ">=1.9.2,<2.0.0"
streamlit-code-editor = ">=0.1.22,<0.2.0"
streamlit-local-storage = "^0.0.25"
pymupdf = "^1.26.3"
streamlit-pdf-viewer = "^0.0.26"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
